<resources>
    <string name="app_name">QuestCityProject</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_title">Quest.City</string>
    <string name="enter_btn">Войти</string>
    <string name="registration_btn">Зарегистрироваться</string>

    <string name="registration_title">Регистрация</string>
    <string name="login_hint">Логин</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="password_approve_hint">Подтверждение</string>
    <string name="confirm_btn">Далее</string>

    <string name="enter_title">Вход</string>
    <string name="auth_btn">К квестам!</string>

    <string name="bottom_menu_quests_btn">Квесты</string>
    <string name="bottom_menu_map_btn">Карта</string>
    <string name="bottom_menu_profile_btn">Профиль</string>

    <string name="username">Пользователь</string>
    <string name="email">google@gmail.com</string>
    <string name="visited_places">Мест посещено: 38</string>
    <string name="active_quests">Активных квестов: 2</string>
    <string name="achievements_got">Достижений получено: 4</string>
    <string name="completed_quests">Квестов завершено: 4</string>
    <string name="completed_quests_title">Завершенные квесты</string>

    <string name="achievement_title">Название</string>
    <string name="achievement_description">Описание</string>

    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="no_active_quests_warning">Нет активных квестов</string>
</resources>