<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@android:color/white">

    <!-- Login Header -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="32dp"
        android:text="@string/enter_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:hint="@string/login_hint"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#757575" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:importantForAutofill="no"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="@string/email_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#757575" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/auth_btn"
        android:textColor="@android:color/white"
        android:padding="16dp" />

</LinearLayout>