<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@android:color/white">

    <!-- Registration Header -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="32dp"
        android:text="@string/registration_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Login Input -->
    <EditText
        android:id="@+id/loginInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"
        android:background="@drawable/edit_text_background_selector"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:hint="@string/login_hint"
        android:inputType="text"
        android:padding="16dp"
        android:textColorHint="#757575" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"
        android:background="@drawable/edit_text_background_selector"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#757575" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"
        android:background="@drawable/edit_text_background_selector"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#757575" />

    <!-- Password Confirmation Input -->
    <EditText
        android:id="@+id/passwordConfirmInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:importantForAutofill="no"
        android:background="@drawable/edit_text_background_selector"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="@string/password_approve_hint"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#757575" />

    <!-- Next Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/confirm_btn"
        android:textColor="@android:color/white"
        app:backgroundTint="@null"
        android:padding="16dp" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text = "Пароли не совпадают"
        android:textColor="#FF0000"
        android:textSize="14sp"
        android:gravity="center"
        android:visibility="gone" />


</LinearLayout>