<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_start">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.questcityproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.questcityproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.questcityproject.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_start"
        android:name="com.example.questcityproject.StartApp"
        android:label="fragment_start"
        tools:layout="@layout/fragment_start_navigation" >
        <action
            android:id="@+id/action_navigation_start_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_start_to_navigation_registration"
            app:destination="@id/navigation_registration" />
    </fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.questcityproject.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login_navigation" />
    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.example.questcityproject.Registration"
        android:label="fragment_registration"
        tools:layout="@layout/fragment_registration_navigation" />
</navigation>